--- a/src/components/main/topPodcasts/style.module.scss
+++ b/src/components/main/topPodcasts/style.module.scss
@@ -2,10 +2,6 @@
 @use "../../../utils/styles/base/_mixin.scss" as m;
 @import url("../../../utils/styles/base/_normalize.scss");
 
-h2, h3, p {
-  font-family: "Inter", sans-serif;
-}
-
 .PodcastContainer {
   display: flex;
   justify-content: center;
@@ -111,6 +107,170 @@ h2, h3, p {
         padding: 30px;
         border-radius: 13px;
         width: 100%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1680px) {
+  .PodcastContainer {
+    padding: 0 80px;
+
+    .TextBlock {
+      p {
+        @include m.font(v.$grey-shade-60, 16px, 400, 24px);
+      }
+
+      h2 {
+        @include m.font(white, 18px, 600, 27px);
+      }
+    }
+
+    .PodcastContainerLeft {
+      padding-right: 60px;
+
+      > div {
+        gap: 40px;
+
+        > img {
+          width: 60px;
+        }
+
+        > div {
+          gap: 4px;
+        }
+
+        h1 {
+          @include m.font(white, 24px, 600, 36px);
+        }
+
+        p {
+          @include m.font(v.$grey-shade-60, 16px, 400, 24px);
+        }
+
+        > :last-child {
+          > div {
+            gap: 4px;
+            border-radius: 8px;
+            padding: 24px;
+          }
+        }
+      }
+    }
+
+    .PodcastContainerRight {
+      gap: 40px;
+      padding: 60px 0 60px 60px;
+
+      > span {
+        gap: 24px;
+
+        video {
+          max-height: 297px;
+          border-radius: 16px;
+          object-fit: cover;
+        }
+
+        h2 {
+          @include m.font(white, 22px, 600, 33px);
+        }
+
+        p {
+          @include m.font(v.$grey-shade-60, 16px, 400, 24px);
+        }
+      }
+
+      > :last-child {
+        gap: 16px;
+
+        > div {
+          padding: 24px;
+          border-radius: 8px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  .PodcastContainer {
+    flex-direction: column;
+    align-items: center;
+    padding: 0 16px;
+
+    .TextBlock {
+      p {
+        @include m.font(v.$grey-shade-60, 14px, 400, 21px);
+      }
+
+      h2 {
+        @include m.font(white, 16px, 600, 24px);
+      }
+    }
+
+    .PodcastContainerLeft {
+      justify-content: center;
+      padding: 40px 0;
+      border-right: none;
+      border-bottom: 1px solid v.$dark-shade-15;
+      width: 100%;
+      max-width: none;
+
+      > div {
+        max-width: 868px;
+        gap: 30px;
+
+        > img {
+          width: 50px;
+        }
+
+        h1 {
+          @include m.font(white, 20px, 600, 30px);
+        }
+
+        p {
+          @include m.font(v.$grey-shade-60, 14px, 400, 21px);
+        }
+
+        > :last-child {
+          > div {
+            gap: 4px;
+            padding: 20px;
+          }
+        }
+      }
+    }
+
+    .PodcastContainerRight {
+      gap: 40px;
+      padding: 40px 24px;
+      width: 100%;
+      max-width: 868px;
+
+      > span {
+        gap: 20px;
+
+        video {
+          max-height: 157px;
+          border-radius: 12px;
+        }
+
+        h2 {
+          @include m.font(white, 18px, 600, 27px);
+        }
+
+        p {
+          @include m.font(v.$grey-shade-60, 14px, 400, 21px);
+        }
+      }
+
+      > :last-child {
+        flex-direction: column;
+        gap: 14px;
+
+        > div {
+          padding: 20px;
+        }
       }
     }
   }
