--- a/src/components/main/generalComponents/crossingButtonBlock/style.module.css
+++ b/src/components/main/generalComponents/crossingButtonBlock/style.module.css
@@ -11,4 +11,10 @@
   padding: 18px 38px;
 }
 
+@media screen and (max-width: 1680px) {
+  .CrossingButtonBlock button {
+    padding: 14px 24px;
+  }
+}
+
 /*# sourceMappingURL=style.module.css.map */
