--- a/src/components/main/generalComponents/tripleContainer/style.module.scss
+++ b/src/components/main/generalComponents/tripleContainer/style.module.scss
@@ -70,6 +70,7 @@
 
     > div {
       flex-direction: column;
+      align-items: center;
 
       > div:not(:first-child) {
         border-left: none;
