--- a/src/components/main/headerSection/style.module.css
+++ b/src/components/main/headerSection/style.module.css
@@ -8,7 +8,7 @@
 .HeaderSection > span {
   display: flex;
   justify-content: center;
-  padding: 60px 162px;
+  padding: 80px 162px 0 162px;
 }
 .HeaderSection > span span {
   display: flex;
@@ -137,7 +137,7 @@
 
 @media screen and (max-width: 1680px) {
   .HeaderSection > span {
-    padding: 60px 80px;
+    padding: 60px 80px 0 80px;
   }
   .HeaderSection > span span h2 {
     color: #98989A;
@@ -212,7 +212,12 @@
 }
 @media screen and (max-width: 1240px) {
   .HeaderSection > span {
-    padding: 40px 16px;
+    justify-content: center;
+    padding: 40px 16px 0 16px;
+  }
+  .HeaderSection > span span {
+    width: 100%;
+    max-width: 868px;
   }
   .HeaderSection > span span h2 {
     color: #98989A;
@@ -270,16 +275,7 @@
     gap: 10px;
   }
   .HeaderSection > div .ShortSection h2 {
-    margin-bottom: 10px;
-    color: white;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-  }
-  .HeaderSection > div .ShortSection canvas, .HeaderSection > div .ShortSection img {
-    position: static !important;
-    width: 100%;
-    height: 185px !important;
+    margin-bottom: 4px;
   }
 }
 
