--- a/src/components/main/headerSection/style.module.scss
+++ b/src/components/main/headerSection/style.module.scss
@@ -11,7 +11,7 @@
   > span {
     display: flex;
     justify-content: center;
-    padding: 60px 162px;
+    padding: 80px 162px 0 162px;
 
     span {
       display: flex;
@@ -155,7 +155,7 @@
 @media screen and (max-width: 1680px) {
   .HeaderSection {
     > span {
-      padding: 60px 80px;
+      padding: 60px 80px 0 80px;
 
       span {
         h2 {
@@ -248,9 +248,13 @@
 @media screen and (max-width: 1240px) {
   .HeaderSection {
     > span {
-      padding: 40px 16px;
+      justify-content: center;
+      padding: 40px 16px 0 16px;
 
       span {
+        width: 100%;
+        max-width: 868px;
+
         h2 {
           @include m.font(v.$grey-shade-60, 20px, 500, 26px);
         }
@@ -318,14 +322,7 @@
         }
 
         h2 {
-          margin-bottom: 10px;
-          @include m.font(white, 16px, 600, 24px)
-        }
-
-        canvas, img {
-          position: static!important;
-          width: 100%;
-          height: 185px!important;
+          margin-bottom: 4px;
         }
       }
     }
