--- a/src/components/main/latestPodcasts/style.module.css
+++ b/src/components/main/latestPodcasts/style.module.css
@@ -1,8 +1,4 @@
 @import url("../../../utils/styles/base/_normalize.scss");
-h2, h3, p {
-  font-family: "Inter", sans-serif;
-}
-
 .TestimonialsBlock {
   display: flex;
 }
@@ -30,6 +26,53 @@ h2, h3, p {
   font-size: 18px;
   font-weight: 400;
   line-height: 27px;
+}
+
+@media screen and (max-width: 1680px) {
+  .TestimonialsBlock > div {
+    gap: 24px;
+  }
+  .TestimonialsBlock > div video {
+    max-height: 244px;
+    border-radius: 10px;
+  }
+  .TestimonialsBlock > div h2 {
+    color: white;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 27px;
+  }
+  .TestimonialsBlock > div p {
+    color: #666666;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+}
+@media screen and (max-width: 1240px) {
+  .TestimonialsBlock {
+    max-width: 868px;
+  }
+  .TestimonialsBlock > div {
+    width: 100%;
+    max-width: none;
+    gap: 20px;
+  }
+  .TestimonialsBlock > div video {
+    max-height: 208px;
+  }
+  .TestimonialsBlock > div h2 {
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+  }
+  .TestimonialsBlock > div p {
+    color: #666666;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+  }
 }
 
 /*# sourceMappingURL=style.module.css.map */
